--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "info.karelov.songlink"
+        applicationId "com.streaminghell.app"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 7
