--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "com.streaminghell.app"
+        applicationId "io.robotmafia.app"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 7
