--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "io.robotmafia.app"
+        applicationId "io.robotmafia.streaminghell"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 7
@@ -30,7 +29,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.android.billingclient:billing:1.2'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
