--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
 
     // Add the Firebase SDK for Crashlytics.
-    implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta03'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
     implementation 'com.android.billingclient:billing:1.2'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
